i'm done with the assignment

--- a/index.html
+++ b/index.html
@@ -8,31 +8,41 @@
 </head>
 <body>
 
-    <h1>Beginning HTML and CSS</h1>
+    <h1>Strawberry Shortcake Recipe</h1>
+<h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup butter</li>
+        <li>1 cup sugar</li>
+        <li>1/2 cup buttermilk</li>
+        <li>2 eggs</li>
+        <li>1 teaspoon vanilla</li>
+        <li>1 1/2 cups all purpose flour</li>
+        <li>1/2 teaspoon salt</li>
+        <li>Strawberries</li>
+        <li>Whipped Cream</li>
+      </ul>
 
-    <p>This is a simple template repo that includes an HTML document and a corresponding stylesheet (CSS). 
-        Use these files to complete the following tasks for this assignment:</p>
+    <h2>Instructions</h2>
+    <li>Preheat the oven to 350, and lightly grease an 8×8 pan or 10 spaces on a muffin tin. </li>
+    <li>Cream the butter and sugar with a spoon, beating well until the mixture is light and slightly fluffy. About 40 strokes around the bowl or so.</li>
+    <li>Add the buttermilk,eggs and vanilla and mix well.</li>
+    <li>Using a sifter sitting over the bowl, add the flour, salt, and baking powder to the sifter and tap the dry ingredients into the wet ones.</li>
+    <li>Mix with a spoon until no dry clumps of flour remain.</li>
+    <li>Bake 25-30 minutes for the 8×8 pan or 15-20 minutes for the muffin tin until the cake springs back and a toothpick inserted in the center comes out clean.</li>
+    <li>Serve slightly warm with fresh strawberries and whipped cream.</li>
 
-    <h2>Clone the Repo</h2>
+    <h2>Notes</h2>
 
-    <p>Clone this repo to your local machine using Visual Studio Code.</p>
+    <p>You can reduce the amount of sugar, but don't go below a half cup, because it will ruin the structure of it.</p>
 
-    <h2>Make Changes</h2>
-
-    <p>Click the "Go Live" button in VS Code so you can see the effects of your changes as you make them.</p>
-
-    <p>Make some changes to this HTML page. Try to include some tags that we didn't go over in class.
-    You can find out more about HTML on <a href="https://www.w3schools.com/html/default.asp">w3schools HTML tutorial</a>.
-    Maybe try to imagine something you'd like to add to the document and find the tags needed to do it.
-    (For example: a table, a button, an emoji, etc.)
+    <p> Try to get fresh strawberries and cut them in half, they'll taste and look better!
     </p>
 
-    <p>Make some changes to the formatting of the page by editing the CSS file. 
-    W3schools has <a href="https://www.w3schools.com/css/default.asp">section dedicated to CSS</a>.
+    <p>If you can, try making your own whipped cream. It'll contain less oil and more dairy!</p>
     
-    <h2>Submit the Assignment</h2>
+    <h2>Enjoy!</h2>
 
-    <p>When you are done, submit the assignment by committing your changes locally and pushing to GitHub. Your assignment is submitted!</p>
+   
 
 </body>
 </html>
