Updated version with picture

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
 
     <h1>Strawberry Shortcake Recipe</h1>
+     <img src="https://static01.nyt.com/images/2023/03/13/multimedia/NHJ-Strawberry-Shortcake-qtkw/NHJ-Strawberry-Shortcake-qtkw-threeByTwoMediumAt2X.jpg" style="width: 300px;px;height:auto;" class="center">
 <h2>Ingredients</h2>
     <ul>
         <li>1/2 cup butter</li>
